# vikingchess

./: .gitmodules  Cargo.toml  readme.md
assets/shaders/: board_material.wgsl
magics/: Cargo.toml
magics/src/: main.rs
src/: board.rs  cursor.rs  magics.rs  main.rs
