[package]
name = "vikingchess"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }
engine = { path = "./engine" }
ron = { version = "0.10.1", features = ["integer128"] }
serde = { version = "1.0.219", features = ["derive"] }

[workspace]
resolver = "3"
members = ["engine", "magics"]
